# hse-healthcheck

./: .dockerignore  .env  .gitignore  deploy.py  docker-compose.yml
app/: .env  Cargo.toml  Dockerfile
app/src/: api.rs  config.rs  main.rs  models.rs  node.rs  repo.rs
app/src/migrations/: 20210125062142_init.sql
docker/: docker-compose.yml
docker/healthcheck/: Dockerfile
docker/postgres/: Dockerfile
nginx/: Dockerfile  nginx.conf  nginx.conf.jinja2  nginx.conf.jinja2.generated
terraform/: app.tf  apply.sh  main.tf  nat.tf  network.tf  nginx.tf  postgres.tf  service_account.tf
terraform/docker/: healthcheck.generated.yaml  nginx.generated.yaml  postgres.generated.yaml  template.jinja2
