[package]
name = "app"
version = "0.1.0"
authors = ["BigRedEye <mail@bigredeye.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

log = "0.4"
env_logger = "0.7"

config = "0.10"
dotenv = "0.15"

actix-web = "3"
actix-rt = "1"
reqwest = "0.10"
fakedata_generator = "0.2"

sqlx = { version = "0.4.2", features = [ "runtime-tokio-rustls", "postgres", "chrono", "migrate" ] }

serde = { version = "1.0", features = [ "derive" ] }
chrono = "0.4"
